# monstars

./: .gitignore  LICENSE.md  README.md  build_monstars.py  call_monstars.py  installer  monstars.sln
bang/: .gitignore  README.md
bang/app/: MANIFEST.in  pyproject.toml
bang/app/bang/: admin.py  apps.py  (+4 more)
bang/provider/: provider.vcxproj
bang/scripts/: app_symlinks.py  build_pam_mod.py  configure.py  server.py
blanko/: README.md  build.py
blanko/app/: MANIFEST.in  pyproject.toml
blanko/scripts/: app_symlinks.py  build.py  configure.py
bupkus/: .gitignore  README.md
bupkus/app/: MANIFEST.in  pyproject.toml
bupkus/scripts/: app_symlinks.py  configure.py  server.py
bupkus/src/: bupkus.cpp  bupkus.sln  bupkus.vcxproj
controller/: pyproject.toml
controller/monstars/: controller.py
installer/: Makefile  installer.c
kernel/: Makefile  macros.h  monstars_nf.c  monstars_nf.h
monstars/: pyproject.toml
nawt/: README.md
python/: pyproject.toml
python/monstars/: controller.py
shared/windows/: monstars-lib.vcxproj  monstars-lib.vcxproj.filters
swackhammer/: README.md
swackhammer/ansible/: swackhammer.yml
swackhammer/app/: MANIFEST.in  pyproject.toml
swackhammer/app/swackhammer/: apps.py  manage.py  settings.py  urls.py  utils.py  views.py  wsgi.py
swackhammer/app/swackhammer/static/swackhammer/: style.css
swackhammer/app/swackhammer/templates/swackhammer/: index.html  jam.html  signin.html
user/: Makefile  listener.py  macros.h  monstars.c
www/: MANIFEST.in  pyproject.toml
www/monstars_c2/: apps.py  urls.py  util.py  views.py
(+124 files in other folders)
